--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "bun run --watch src/index.ts",
-    "build": "bun build src/index.ts --outdir dist --production",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "devDependencies": {
